fixed homepage responsiveness because of overflow issues

--- a/client/src/components/Notification/Notification.css
+++ b/client/src/components/Notification/Notification.css
@@ -1,4 +1,15 @@
-.notification{
+@media only screen and (max-width: 768px) {
+    .notification{
+    background: rgba(255, 255, 255, 0.4);
+    border-radius: 15px;
+    border: 1px solid whitesmoke;
+    font-size: 1.5vh;
+    padding: 15px 10px 0 10px;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    .notification{
     background: rgba(255, 255, 255, 0.4);
     border-radius: 15px;
     border: 1px solid whitesmoke;
@@ -7,8 +18,10 @@
     padding: 0 25px;
     margin-top: 1vh;
     white-space: nowrap;
-    overflow: hidden;
+    overflow-x: auto;
+    overflow-y: hidden;
     font-size: 1.5vh;
+    }
 }
 
 .delete-notification-button{
